<resources>
    <string name="app_name">myLeave</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="hint_email">Email</string>
    <string name="password">Password</string>
    <string name="condition_password">8+ Characters</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="pending_applications">Pending Applications</string>
    <string name="dashboard">Dashboard</string>
    <string name="past_applications">Past Applications</string>
    <string name="add" />
    <string name="add_item_fab">add_item_fab</string>
    <string name="leave_type">Sick Leave</string>
    <string name="application_status">Pending</string>
    <string name="leave_duration">10/01/22 - 12/01/22</string>
    <string name="apply_for_leave">Apply for Leave</string>
    <string name="namelf">Name*</string>
    <string name="roll_no">Roll No.*</string>
    <string name="cse">CSE</string>
    <string name="department">Department*</string>
    <string name="leave">Leave*</string>
    <string name="leave_type_spin">Leave Type*</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="purpose_for_leave">Purpose for Leave*</string>
    <string name="reason">Reason</string>
    <string name="attachment">Attachment</string>
    <string name="no_file_chosen">No file chosen</string>
    <string name="apply">Apply</string>
    <string name="choose_file">Choose File</string>
    <string name="agrim_gupta">Agrim Gupta</string>
    <string name="roll_no_">Roll No.</string>
    <string name="leaves">Leaves</string>
    <string name="leave_history">Leave History</string>
    <string name="leave_request">Leave Request</string>
    <string name="details">Details</string>
    <string name="name_with_colon">Name :</string>
    <string name="roll_no_with_colon">Roll No :</string>
    <string name="department_with_colon">Department :</string>
    <string name="leave_type_with_colon">Leave Type :</string>
    <string name="casual">Casual</string>
    <string name="leave_">Leave</string>
    <string name="from">From :</string>
    <string name="_21_05_2024">21/05/2024</string>
    <string name="_26_05_2024">26/05/2024</string>
    <string name="to">To :</string>
    <string name="purpose">Purpose</string>
    <string name="temp_purpose">I am going to my hometown from 21st May to 26th May due to a family function. So kindly grant me a leave for 5 days.</string>
    <string name="wedding_function_pdf">Wedding_Function.pdf </string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="back_button">Back Button</string>
    <string name="download_button">Download Button</string>
    <string name="view_leave_history">View Leave History</string>
    <string-array name="leave_types">
        <item>Select--</item>
        <item>Sick Leave</item>
        <item>Casual Leave</item>
        <item>Emergency Leave</item>
        <!-- Add other leave types as needed -->
    </string-array>
    <string-array name="department_array">
        <item>CSE</item>
        <item>ME</item>
        <item>SM</item>
        <item>ECE</item>
        <item>Design</item>
    </string-array>
    <string name="hint_name">Name</string>
    <string name="SignUp_image">SignUp Image</string>
    <string name="login_image">Login Image</string>
    <string name="login_msg">Login to your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="Forgot">Forgot</string>
    <string name="Password">Password</string>
    <string name="reset">Reset</string>

    <string name="approve_leave">Approve Leave?</string>
    <string name="approve_msg">Are you sure you want to approve the leave request?</string>
    <string name="Reject_leave">Reject Leave?</string>
    <string name="reject_msg">Are you sure you want to reject the leave request?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>



</resources>