<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.admin.LeaveEntryActivity">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvLeaveRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/epilogue_bold"
            android:text="@string/leave_request"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@color/background"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvLeaveRequest"
                app:layout_constraintBottom_toBottomOf="@id/tvLeaveRequest"/>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="8dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvLeaveRequest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tvDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/details"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/name_with_colon"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDetail" />

                <TextView
                    android:id="@+id/tvRollNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/roll_no_with_colon"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvTempRollNo" />

                <TextView
                    android:id="@+id/tvDepartment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/department_with_colon"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvTempDepartment" />

                <TextView
                    android:id="@+id/tvLeaveType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/leave_type_with_colon"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvTempLeaveType" />


                <TextView
                    android:id="@+id/tvTempName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/agrim_gupta"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/glReference"
                    app:layout_constraintTop_toTopOf="@+id/tvName" />

                <TextView
                    android:id="@+id/tvTempRollNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="22BCS016"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/glReference"
                    app:layout_constraintTop_toBottomOf="@id/tvTempName" />

                <TextView
                    android:id="@+id/tvTempDepartment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/cse"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/glReference"
                    app:layout_constraintTop_toBottomOf="@id/tvTempRollNo" />

                <TextView
                    android:id="@+id/tvTempLeaveType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/casual"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/glReference"
                    app:layout_constraintTop_toBottomOf="@id/tvTempDepartment" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glReference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.35" />

                <TextView
                    android:id="@+id/tvLeave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/leave_"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLeaveType" />

                <LinearLayout
                    android:id="@+id/llFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLeave">

                    <TextView
                        android:id="@+id/tvFrom"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/from"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvFromDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/_21_05_2024"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:fontFamily="@font/inter_regular"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layout_constraintStart_toEndOf="@+id/tvReferenceCenter"
                    app:layout_constraintTop_toTopOf="@id/llFrom">

                    <TextView
                        android:id="@+id/tvTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/to"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@id/tvToDate"
                        app:layout_constraintTop_toTopOf="@id/tvFrom" />

                    <TextView
                        android:id="@+id/tvToDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_26_05_2024"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:fontFamily="@font/inter_regular"
                        />
                </LinearLayout>


                <TextView
                    android:id="@+id/tvPurpose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/purpose"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/llFrom" />

                <TextView
                    android:id="@+id/tvTempPurpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/temp_purpose"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_regular"
                    app:layout_constraintTop_toBottomOf="@id/tvPurpose" />

                <TextView
                    android:id="@+id/tvAttachment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/attachment"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTempPurpose" />

                <TextView
                    android:id="@+id/tvPDFName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/wedding_function_pdf"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAttachment" />

                <ImageView
                    android:id="@+id/ivDownload"
                    android:layout_width="25dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/download_button"
                    android:src="@drawable/download"
                    app:layout_constraintBottom_toBottomOf="@+id/tvPDFName"
                    app:layout_constraintStart_toEndOf="@id/tvPDFName"
                    app:layout_constraintTop_toTopOf="@id/tvPDFName" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="5dp"
                    android:indeterminateTint="@color/black"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/ivDownload"
                    app:layout_constraintStart_toEndOf="@id/ivDownload"
                    app:layout_constraintTop_toTopOf="@id/ivDownload" />

                <TextView
                    android:id="@+id/tvViewLeaveHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/view_leave_history"
                    android:textColor="@color/btn_add_color"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPDFName" />

                <TextView
                    android:id="@+id/tvApprove"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/custom_textview"
                    android:backgroundTint="@color/green"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/approve"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/tvReferenceCenter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvViewLeaveHistory" />

                <TextView
                    android:id="@+id/tvReferenceCenter"
                    android:layout_width="2dp"
                    android:layout_height="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/custom_textview"
                    android:backgroundTint="@color/red"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/reject"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvReferenceCenter"
                    app:layout_constraintTop_toTopOf="@id/tvApprove" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

<!---->