<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tv_reject_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/epilogue_bold"
            android:text="@string/Reject_leave"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="32dp"
            >

        </TextView>

        <TextView
            android:id="@+id/tv_reject_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/reject_msg"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:textSize="18sp"
            >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="32dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_yes_reject"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/inter_medium"
                android:text="@string/yes"
                android:layout_marginRight="40dp"
                android:paddingVertical="8dp"
                android:backgroundTint="@color/btn_color"
                android:textSize="24sp"
                >

            </Button>

            <Button
                android:id="@+id/btn_no_reject"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/inter_medium"
                android:text="@string/no"
                android:backgroundTint="@color/grey2"
                android:textSize="24sp"
                android:textColor="@color/black_dialog_box"
                />

        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>