<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:layout_margin="12dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_leaveType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/leave_type"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_applicationStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application_status"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/tv_leaveDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_custom"
                android:text="@string/leave_duration"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
