<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/top_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/sign_up_image"
        android:elevation="4dp"
        android:layout_marginBottom="-24dp">


        <ImageView
            android:id="@+id/iv_forgot_passwordImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/login_image"
            android:src="@drawable/forgot_password_img"
            />
    </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="28dp"
            android:layout_below="@+id/top_cardView"
            android:elevation="4dp"
            android:background="@color/off_white"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/off_white"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/reference"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="32dp"
                    android:alpha="0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvForgotTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/epilogue_bold"
                    android:text="@string/Forgot"
                    android:textColor="@color/blue"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="@+id/reference"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/Password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/epilogue_bold"
                    android:text="@string/Password"
                    android:textColor="@color/blue"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="@+id/tvForgotTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvForgotTitle" />

                <!-- Login Fields -->

                <LinearLayout
                    android:id="@+id/llLoginFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/btnReset"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Password">

                <TextView
                    android:id="@+id/tvLoginEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/epilogue_medium"
                    android:text="@string/email"
                    android:textColor="@color/light_black"
                    android:textSize="15sp" />

                    <EditText
                        android:id="@+id/etLoginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/custom_edittext"
                        android:elevation="1dp"
                        android:fontFamily="@font/inter_regular"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/leaves_txt"
                        android:textSize="16sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="292dp"
                    android:backgroundTint="@color/btn_color"
                    android:fontFamily="@font/lato_bold"
                    android:paddingVertical="2dp"
                    android:text="@string/reset"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/Password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent="0.6" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
